Revert "to be removed if production doesnt work 2"
This reverts commit b3507aa3b2eb90199a9427c14b4374c3c5acea0c.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Robel Ephrem",
-  "name": "Design Portfolio of Robel Ephrem",
+  "short_name": "Hamish Williams",
+  "name": "Design Portfolio of Hamish Williams",
   "icons": [
     {
       "src": "shortcut.png",
